kube-system/dashboard/ingress-tls.yaml
apiVersion: extensions/v1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "${component.ingress.kubernetes.ingressClass}"
    kubernetes.io/tls-acme: "true"
spec:
  rules:
  - host: ${component.kubernetes-dashboard.ingress.urlPrefix}.${component.ingress.ssoFqdn}
    http:
      paths:
      - path: ${component.kubernetes-dashboard.ingress.path}
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
  tls:
    - hosts:
      - ${component.ingress.ssoFqdn}
      - ${component.kubernetes-dashboard.ingress.urlPrefix}.${component.ingress.ssoFqdn}
      secretName: kubernetes-dashboard-tls
